Create ILP variables; All lectures need to be assigned to room; bug-fix parse XML

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,6 @@ find_package(Cplex)
 include_directories(SYSTEM ${CPLEX_INCLUDE_DIRS})
 
 
-set(SOURCE_FILES main.cpp Course.h Instance.h Lecture.h Class.h Room.h Subpart.h Unavailability.h Student.h distribution.h DistributionRequired.h DistributionPenalty.h Constraint.h WithLimit.h NoLimit.h Limits.h)
+set(SOURCE_FILES main.cpp Course.h Instance.h Lecture.h Class.h Room.h Subpart.h Unavailability.h Student.h distribution.h DistributionRequired.h DistributionPenalty.h Constraint.h WithLimit.h NoLimit.h Limits.h ILP.h ILP.cpp)
 add_executable(timetabler ${SOURCE_FILES} )
 target_link_libraries(timetabler ${CPLEX_LIBRARIES})
